# oskar-the-news-pigeon

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: build.yaml
src/: __init__.py  config.py  curator.py  db.py  fetcher.py  formatter.py  main.py  models.py  preprocessor.py  sender.py  settings.py
