[project]
name = "oskar-the-news-pigeon"
version = "0.1.0"
description = "Daily news digest Telegram bot powered by Claude"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0,<7",
    "httpx>=0.27,<1",
    "anthropic>=0.40,<1",
    "python-telegram-bot>=21.0,<22",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "rapidfuzz>=3.0,<4",
    "structlog>=24.0,<26",
    "apscheduler>=3.10,<4",
]

[project.scripts]
oskar = "src.main:main"
